<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_information_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_margin"
        android:orientation="horizontal">

        <TextView style="@style/tv_horizontal_black"
            android:id="@+id/tv_match_number"
            android:layout_weight="1"
            android:text="@string/match_number" />

        <View style="@style/view_standard_vertical_separator" />

        <TextView style="@style/tv_horizontal_black"
            android:id="@+id/tv_timer_display"
            android:layout_weight="1" />

        <View style="@style/view_standard_vertical_separator" />

        <TextView style="@style/tv_horizontal_black"
            android:id="@+id/tv_team_number"
            android:layout_weight="1"
            android:text="@string/team_number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/ll_information_bar">

        <View style="@style/view_standard_horizontal_separator" />

        <TextView style="@style/tv_standard_grey"
            android:layout_weight="0.75"
            android:text="@string/placement_type_one" />

        <Button style="@style/btn_standard_white"
            android:id="@+id/btn_placement_one"
            android:layout_weight="1"
            android:text="@string/btn_placement_one"
            android:onClick="placementOneOnClick" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button style="@style/btn_standard_white"
            android:id="@+id/btn_placement_two"
            android:layout_weight="1"
            android:text="@string/btn_placement_two"
            android:onClick="placementTwoOnClick" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView style="@style/tv_standard_grey"
            android:layout_weight="0.75"
            android:text="@string/incap" />

        <Button style="@style/btn_standard_white"
            android:id="@+id/btn_INCAP"
            android:layout_weight="1"
            android:text="@string/incap"
            android:onClick="incapOnClick" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button style="@style/btn_standard_white"
            android:id="@+id/btn_submit"
            android:layout_weight="1"
            android:text="SUBMIT"
            android:onClick="submitOnClick" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>

</RelativeLayout>